Update to production

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -19,7 +19,7 @@
         <div class="container text">
             <textarea name="text" cols="30"  form="text2Fact"><%= fact %></textarea>
         </div>
-        <button form="text2Fact" type="submit" name="submit" value="submit" formaction="/get"><span>#</span> Big Brainz!</button>
+        <button form="text2Fact" type="submit" name="submit" value="submit" formaction="/generate"><span>#</span> Big Brainz!</button>
     </main>
 </body>
 </html>
